# fingerprint-faceid-module

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
components/buzzer/: CMakeLists.txt  buzzer.c
components/buzzer/include/: buzzer.h
components/f900/: CMakeLists.txt  README.md  TECH.md  f900.c
components/f900/include/: f900.h
components/log_redirect/: CMakeLists.txt  log_redirect.c
components/log_redirect/include/: log_redirect.h
components/mqtt_helper/: CMakeLists.txt  mqtt_helper.c
components/mqtt_helper/include/: mqtt_helper.h
components/r502/: CMakeLists.txt  r502.c
components/r502/include/: r502.h
components/sensor_manager/: CMakeLists.txt  sensor_manager.c
components/sensor_manager/include/: sensor_manager.h
components/settings/: CMakeLists.txt  settings.c
components/settings/include/: settings.h
components/static/: CMakeLists.txt  static.c
components/static/files/: about.html  app.js  camera.html  face.html  fingerprint.html  index.html  log.html  settings.html  style.css  update.html
components/static/include/: static.h
components/tabledb/: CMakeLists.txt  tabledb.c
components/tabledb/include/: tabledb.h
components/vl53l0x/: CMakeLists.txt  vl53l0x.c
components/vl53l0x/include/: vl53l0x.h
components/webserver/: CMakeLists.txt  webserver.c
components/webserver/include/: webserver.h
docs/: F900-1.md  F900-2.md  R502.md
main/: CMakeLists.txt  access_control.c  main.c  web_enrolling_handlers.c  web_log_handlers.c  web_ota.c  web_photo_handlers.c  web_settings_handlers.c  web_static_handlers.c  web_system_handlers.c  wifi.c
main/include/: access_control.h  table_types.h  web_handlers.h  wifi.h
tools/: .facelock.ini  dir_hash.py
